# GatorEngine

./: .gitignore  README.md  imgui.ini  main.py  todo.txt
assets/shaders/: exampleCustom.glsl  gizmo.glsl  picking.glsl  quad.glsl  sprite.glsl
common/: colors.py  error.py  events.py  gimgui.py  saving.py  settings.py
gator/: README.md  application.py  entity.py  pyproject.toml  scene.py
gator/components/: component.py  spriterenderer.py  transform.py
gator/core/: keys.py  mouse.py  window.py
gator/graphics/: mesh.py  renderbatch.py  renderer.py  shader.py
gator/resources/: assets.py  sprite.py  texture.py
gator/src/gator/: application.py  entity.py  scene.py
gator/src/gator/common/: error.py  events.py  gimgui.py  saving.py  settings.py  singletons.py
gator/src/gator/components/: all.py  component.py  shaderrenderer.py  spriterenderer.py  transform.py
gator/src/gator/core/: camera.py  keys.py  mouse.py  time.py  window.py
gator/src/gator/graphics/: customrenderbatch.py  customrenderer.py  framebuffer.py  mesh.py  renderbatch.py  renderer.py  shader.py
gator/src/gator/resources/: assets.py  sprite.py  texture.py
geditor/: README.md  editor.py  imguilayer.py  pyproject.toml
geditor/projects/none/: allComponents.py  idle.ge
geditor/projects/test/: allComponents.py  main.ge
geditor/src/geditor/: editor.py  (+1 more)
geditor/tabs/: properties.py  scenesettings.py
projects/GatorEngine_none/: customResources.py  idle.ge  settings.geproject
projects/GatorEngine_test/: NewScene.ge  allComponents.py  customResources.py  main.ge  settings.geproject
(+16 files in other folders)
